# bwinf42

./: .gitignore  .gitmodules  Aufgabe 2 Dokumentation.md  README.md  egano.md  egano.py  nandu.py  server.py  wundertuete.py
A1/: Cargo.toml  README ARUKONE.txt  README.md
A1/crates/checker/: Cargo.toml
A1/crates/checker/src/: lib.rs
A1/crates/cli/: Cargo.toml
A1/crates/cli/src/: main.rs
A1/crates/generator/: Cargo.toml
A1/crates/generator/src/: lib.rs
A3/: A3.py  Cargo.toml  DGi22TI4tVon9GmlfGUh3uY8.ttf.fnt
A3/crates/algorithm/: Cargo.toml
A3/crates/algorithm/src/: lib.rs  main.rs
A3/crates/visualizer/: Cargo.toml
A3/crates/visualizer/src/: main.rs
A4/: A4.py  Dokumentation Aufgabe 4.docx
A5/: A5.py  a5.py
J1/: Dokumentation Junioraufgabe 1.docx  J1.py
J2/: Dokumentation Junioraufgabe 2.docx  J2.py
server/: Cargo.toml
server/src/: a_star_glue.rs  arukone_glue.rs  lib.rs
